Fix extra margin when no tool is loaded

--- a/museum_site/static/css/main.css
+++ b/museum_site/static/css/main.css
@@ -3,17 +3,24 @@
 {
     display:grid;
     grid-template-areas:
-    "tool tool tool"
     "left content right"
     "footer footer footer";
-
     grid-template-columns:1fr minmax(auto, 1280px) 1fr;
-    grid-template-rows:auto auto auto;
-    grid-gap:14px 8px;
+    grid-template-rows:auto auto;
+    grid-gap:7px 8px;
     max-width:1920px;
     margin-left: auto;
     margin-right: auto;
     justify-items:center;
+}
+
+.grid-root[data-active-tool=true]
+{
+    grid-template-areas:
+    "tool tool tool"
+    "left content right"
+    "footer footer footer";
+    grid-template-rows:auto auto auto;
 }
 
 .grid-root.expanded
@@ -23,6 +30,14 @@
     "footer";
     grid-template-columns:auto;
     max-width:100vw;
+}
+
+.grid-root[data-active-tool=true].expanded
+{
+    grid-template-areas:
+    "tool"
+    "content"
+    "footer";
 }
 
 .grid-root.expanded #content
@@ -43,6 +58,16 @@
     max-width:750px;
     justify-self: start;
     z-index:4;
+}
+
+#active-tool > div {
+    box-sizing:border-box;
+    background: var(--block-bg);
+    border: 1px solid var(--border-color);
+    width:750px;
+    max-width:100vw;
+    margin:auto;
+    padding:2px;
 }
 
 .sidebar { min-width:255px; max-width:255px; margin-left:8px; margin-right:8px; }
